// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bud.bundle > should set the bundle using a string 1`] = `
{
  "automaticNameDelimiter": "/",
  "cacheGroups": {
    "default": false,
    "react": {
      "chunks": "all",
      "enforce": true,
      "filename": "js/bundle/[name].js",
      "idHint": "react",
      "name": "react",
      "priority": -10,
      "test": /\\[\\\\/\\]\\(react\\)\\[\\\\/\\]/,
    },
  },
}
`;

exports[`bud.bundle > should set the bundle using a string name and a string test 1`] = `
{
  "automaticNameDelimiter": "/",
  "cacheGroups": {
    "default": false,
    "react": {
      "chunks": "all",
      "enforce": true,
      "filename": "js/bundle/[name].js",
      "idHint": "react",
      "name": "react",
      "priority": -10,
      "test": /\\[\\\\/\\]\\(react\\)\\[\\\\/\\]/,
    },
  },
}
`;

exports[`bud.bundle > should set the bundle using a string name and array of strings test 1`] = `
{
  "automaticNameDelimiter": "/",
  "cacheGroups": {
    "default": false,
    "react": {
      "chunks": "all",
      "enforce": true,
      "filename": "js/bundle/[name].js",
      "idHint": "react",
      "name": "react",
      "priority": -10,
      "test": /\\[\\\\/\\]\\(react\\|react-dom\\)\\[\\\\/\\]/,
    },
  },
}
`;

exports[`bud.bundle > should set the bundle using a string name and regular expression test 1`] = `
{
  "automaticNameDelimiter": "/",
  "cacheGroups": {
    "default": false,
    "react": {
      "chunks": "all",
      "enforce": true,
      "filename": "js/bundle/[name].js",
      "idHint": "react",
      "name": "react",
      "priority": -10,
      "test": /react/,
    },
  },
}
`;
